# contact-alignment

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  batch_surface_walk.py  cips_matrix.csv  mj_score.py  pyproject.toml  requirements-db200k.txt
contact_alignment/: __init__.py  db200k.py  db200k_scan.py  design.py  residues.py
docs/: OVERVIEW.md  db200k.md  zenodo_release.md
docs/modules/: alignment_window.md  amino_acid_properties.md  cli.md  clustering.md  dynamic_programming.md  fasta_io.md  formatting.md  hmm_interface.md  motifs.md  scoring.md  statistics.md
examples/db200k/: nbr1_human_uba_913_957.fasta  nbr1_human_uba_913_959.fasta  nbr1_human_uba_913_966.fasta  nbr1_human_uba_structure_map.tsv
idp_design/: db200k_scan.py
prompts/: 2026-01-21-modularize.md
refs/: mj_matrix.csv
scripts/: _db200k_cli.py  db200k_reciprocal_1x1.py  design_db200k_reciprocal_sequence.py  flexible_motif_pose_sampler.py  rebuild_mammalian_mvp_gbp_orthologous_db200k.py  report_db200k_window_ranks.py  rerank_db200k_contact_weighted.py  rescore_db200k_reciprocal_3x3.py  scan_db200k.py  scan_db200k_accessibility.py  scan_db200k_chunks.py
sprot_chunks/: sprot_000.fasta  sprot_001.fasta  sprot_002.fasta  sprot_003.fasta  sprot_004.fasta  sprot_005.fasta  sprot_006.fasta  sprot_007.fasta  sprot_008.fasta  sprot_009.fasta  sprot_010.fasta  sprot_011.fasta  sprot_012.fasta  sprot_013.fasta  sprot_014.fasta  sprot_015.fasta  sprot_016.fasta  sprot_017.fasta  sprot_018.fasta  sprot_019.fasta  sprot_020.fasta  sprot_021.fasta  sprot_022.fasta  sprot_023.fasta  sprot_024.fasta  sprot_025.fasta  sprot_026.fasta  sprot_027.fasta  sprot_028.fasta
src/mj_align/: __init__.py  alignment_window.py  amino_acid_properties.py  cli.py  clustering.py  dynamic_programming.py  fasta_io.py  formatting.py  hmm_interface.py  motifs.py  scoring.py  statistics.py
src/pocket_pipeline/: build_apim_feature_model.py  centroid_optimize.py  joint_two_peptide_unconstrained.py  make_proteome_minus_r1r2_from_ipbc.py  optimize_search.py  orientation_check.py  overlap_r3.py  pairdist_hardcut.py  plot_pare_gyrb_summary.py  pocket_pipeline.py  prove_global_optimum.py  robust_overlap.py  sanitize_r3_mapping.py  score_overlap_summaries.py
src/surface_walk/: batch_surface_walk.py  surface_walk.py
tests/: test_db200k_scan.py  test_import.py
