[project]
name = "contact-alignment"
version = "0.1.0"
description = "Contact-conditioned alignment scoring and DB200K scanning utilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/henryhardigan/contact-alignment"

[project.optional-dependencies]
db200k = [
    "numpy>=1.20",
    "pandas>=1.5",
    "scipy>=1.9",
    "biopython>=1.81",
    "networkx>=3.0",
    "freesasa>=2.2.1",
]
numpy = ["numpy>=1.20"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
mj-score = "mj_align.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mj_align", "contact_alignment"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Ignore naming convention warnings for standard mathematical notation (N, K, L)
ignore = ["N803", "N806"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
